--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "db-manager-service"]
 	path = db-manager-service
 	url = git@github.com:maestrom4/db-manager-service.git
+[submodule "employee-service"]
+	path = employee-service
+	url = git@github.com:maestrom4/employee-service.git
