--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,36 @@
-# See https://help.github.com/articles/ignoring-files for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
 
+# next.js
+/.next/
+/out/
+
 # production
 /build
-/.next
-/out
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.pem
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Next.js
-.next/
-out/
-
 # local env files
-.env
-.env.local
+.env*.local
 
 # vercel
 .vercel
 
-# Storybook
-.storybook-out/
-
-# Generated files
-.generated/
+# typescript
+*.tsbuildinfo
+next-env.d.ts
