Update root repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "client"]
 	path = client
 	url = git@github.com:maestrom4/client.git
+[submodule "file-generator-service"]
+    path = file-generator-service
+	url = git@github.com:maestrom4/file-generator-service.git
