add: Re-added file-generator-service submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "auth-service"]
 	path = auth-service
 	url = git@github.com:maestrom4/auth-service.git
+[submodule "file-generator-service"]
+	path = file-generator-service
+	url = git@github.com:maestrom4/file-generator-service.git
