--- a/k8s/api-gateway-service/deployment.yaml
+++ b/k8s/api-gateway-service/deployment.yaml
@@ -15,6 +15,8 @@ spec:
     spec:
       containers:
       - name: api-gateway-service
-        image: api-gateway-service-image:latest
+        image: localhost:5000/api-gateway:latest
         ports:
         - containerPort: 8080
+      imagePullSecrets:
+      - name: myregistrykey
