--- a/k8s/payslip-service/deployment.yaml
+++ b/k8s/payslip-service/deployment.yaml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
       - name: payslip-service
-        image: payslip-service-image:latest
+        image: localhost:5000/payslip-service-image:latest
         ports:
         - containerPort: 8080
