--- a/k8s/time-log-service/deployment.yaml
+++ b/k8s/time-log-service/deployment.yaml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
       - name: time-log-service
-        image: time-log-service-image:latest
+        image: localhost:5000/time-log-service-image:latest
         ports:
         - containerPort: 8080
