--- a/k8s/auth-service/deployment.yaml
+++ b/k8s/auth-service/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: employee-service
+  name: auth-service
   namespace: development
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: employee-service
+      app: auth-service
   template:
     metadata:
       labels:
-        app: employee-service
+        app: auth-service
     spec:
       containers:
-      - name: employee-service
-        image: localhost:5000/employee-service:latest
+      - name: auth-service
+        image: localhost:5000/auth-service:latest
         ports:
         - containerPort: 8080
