--- a/k8s/employee-service/deployment.yaml
+++ b/k8s/employee-service/deployment.yaml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
       - name: employee-service
-        image: employee-service-image:latest
+        image: localhost:5000/employee-service:latest
         ports:
         - containerPort: 8080
