--- a/k8s/api-gateway-service/deployment.yaml
+++ b/k8s/api-gateway-service/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: api-gateway-service
-        image: localhost:5000/api-gateway:latest
+        image: localhost:5000/api-gateway-service:latest
         ports:
         - containerPort: 8080
       imagePullSecrets:
