add: image and update readme

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,16 +65,73 @@ services:
     container_name: auth-service
     environment:
       SALT_PASS_KEY: ${SALT_PASS_KEY}
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
-      MONGO_INITDB_COLLECTION: ${MONGO_INITDB_COLLECTION}
-      MONGO_URI: "mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongodb:27017/admin"
-      JWT_SECRET_KEY: ${JWT_SECRET_KEY}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_USERS_DATABASE}
+      MONGO_INITDB_COLLECTION: ${MONGO_USERS_DATABASE}
+      MONGO_URI: ${MONGO_USERS_URI}
+      # MONGO_URI: "mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@mongodb:27017/admin"
     ports:
       - "8085:8080"
     depends_on:
-       - mongodb
+       - authdb
+    networks:
+      - backend
+  authdb:
+    image: mongo:latest
+    container_name: authdb
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_USERS_DATABASE}
+    ports:
+      - "${MONGO_USERS_PORT}:27017"
+    volumes:
+      - authdb-data:/data/db
+
+    networks:
+      - backend
+  empdb:
+    image: mongo:latest
+    container_name: empdb
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_EMP_DATABASE}
+    ports:
+      - "${MONGO_EMP_PORT}:27017"
+    volumes:
+      - empdb-data:/data/db
+
+    networks:
+      - backend
+
+  payslipdb:
+    image: mongo:latest
+    container_name: payslipdb
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_PAYSLIP_DATABASE}
+    ports:
+      - "${MONGO_PAYSLIP_PORT}:27017"
+    volumes:
+      - payslipdb-data:/data/db
+
+    networks:
+      - backend
+  timelogdb:
+    image: mongo:latest
+    container_name: timelogdb
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_TIMELOG_DATABASE}
+    ports:
+      - "${MONGO_TIMELOG_PORT}:27017"
+    volumes:
+      - timelogdb-data:/data/db
+
     networks:
       - backend
 
@@ -105,20 +162,6 @@ services:
   #   networks:
   #     - frontend
   #     - internal
-  mongodb:
-    image: mongo:latest
-    container_name: mongodb
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongodb-data:/data/db
-
-    networks:
-      - backend
 
   
   # graphql-playground:
@@ -143,5 +186,11 @@ networks:
     name: frontend-network
 
 volumes:
-  mongodb-data:
-    name: mongodb-data-volume
+  authdb-data:
+    name: authdb-data-volume
+  empdb-data:
+    name: empdb-data-volume
+  payslipdb-data:
+    name: payslipdb-data-volume
+  timelogdb-data:
+    name: timelogdb-data-volume
